--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
   <h1>VEINTIDOZ</h1>
   <div class="links">
-    <a href="https://instagram.com" target="_blank">Instagram</a>
+    <a href="https://www.instagram.com/luno.022/#" target="_blank">Instagram</a>
     <a href="https://youtube.com/@VEINTIDOZ22" target="_blank">YouTube</a>
     <a href="#" onclick="alert('veintidoz'); return false;">Discord</a>
   </div>
