--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       navigator.clipboard.writeText(discord).then(() => {
         btn.innerText = "✅ ¡Copiado!";
         setTimeout(() => {
-          btn.innerText = "💬 Copiar Discord";
+          btn.innerText = "Discord";
         }, 2000);
       }).catch(() => {
         alert("Hubo un error al copiar.");
