--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <div class="links">
     <a href="https://www.instagram.com/luno.022/#" target="_blank">Instagram</a>
     <a href="https://youtube.com/@VEINTIDOZ22" target="_blank">YouTube</a>
-    <button id="discordBtn" onclick="copiarDiscord()">💬 Copiar Discord</button>
+    <button id="discordBtn" onclick="copiarDiscord()">Discord</button>
   </div>
 
   <script>
