--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>22</title>
-  <link rel="icon" href="https://i.imgur.com/3fKX0tG.png" />
+  <link rel="icon" href="https://i.imgur.com/IwDPAF.png" />
   <style>
     body {
       background: #000;
@@ -19,19 +19,11 @@
       align-items: center;
       height: 100vh;
       overflow: hidden;
-      cursor: url('https://cur.cursors-4u.net/cursors/cur-11/cur1047.cur'), auto;
     }
 
     h1 {
       font-size: 2.8em;
       margin: 0;
-      animation: fadeIn 2s ease-in-out forwards;
-    }
-
-    .logo {
-      width: 100px;
-      height: 100px;
-      margin-bottom: 20px;
       animation: fadeIn 2s ease-in-out forwards;
     }
 
@@ -68,9 +60,6 @@
   </style>
 </head>
 <body>
-  <!-- Logo animado -->
-  <img src="https://media.giphy.com/media/3oKIPwoeGErMmaI43C/giphy.gif" alt="Logo" class="logo">
-
   <h1>VEINTIDOZ</h1>
 
   <div class="links">
