--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>22</title>
-  <link rel="icon" href="https://i.imgur.com/IwDPAF.png" />
+  <link rel="icon" href="https://i.imgur.com/S1fCyLn.png" />
   <style>
     body {
       background: #000;
