--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <a href="https://www.instagram.com/luno.022/#" target="_blank">Instagram</a>
     <a href="https://youtube.com/@VEINTIDOZ22" target="_blank">YouTube</a>
     <button id="discordBtn" onclick="copiarDiscord()">Discord</button>
-    <a href="https://github.com/tu-usuario" target="_blank">GitHub</a>
+    <a href="https://github.com/VEINTIDOZ" target="_blank">GitHub</a>
   </div>
 
   <script>
